# pkg/api/registry/v1/zz_generated.deepcopy.go
@@ -1,5 +1,4 @@
 //go:build !ignore_autogenerated
-// +build !ignore_autogenerated
 
 /*
 Copyright 2021 Adobe. All rights reserved.
@@ -158,7 +157,6 @@ func (in *ClusterSpec) DeepCopyInto(out *ClusterSpec) {
 			(*in)[i].DeepCopyInto(&(*out)[i])
 		}
 	}
-	out.K8sInfraRelease = in.K8sInfraRelease
 	in.Extra.DeepCopyInto(&out.Extra)
 	if in.AllowedOnboardingTeams != nil {
 		in, out := &in.AllowedOnboardingTeams, &out.AllowedOnboardingTeams
@@ -195,14 +193,16 @@ func (in *ClusterSpec) DeepCopyInto(out *ClusterSpec) {
 			if val == nil {
 				(*out)[key] = nil
 			} else {
-				in, out := &val, &outVal
+				inVal := (*in)[key]
+				in, out := &inVal, &outVal
 				*out = make(ServiceMetadataItem, len(*in))
 				for key, val := range *in {
 					var outVal map[string]string
 					if val == nil {
 						(*out)[key] = nil
 					} else {
-						in, out := &val, &outVal
+						inVal := (*in)[key]
+						in, out := &inVal, &outVal
 						*out = make(ServiceMetadataMap, len(*in))
 						for key, val := range *in {
 							(*out)[key] = val
@@ -272,7 +272,8 @@ func (in *Extra) DeepCopyInto(out *Extra) {
 			if val == nil {
 				(*out)[key] = nil
 			} else {
-				in, out := &val, &outVal
+				inVal := (*in)[key]
+				in, out := &inVal, &outVal
 				*out = make([]string, len(*in))
 				copy(*out, *in)
 			}
@@ -300,21 +301,6 @@ func (in *Extra) DeepCopy() *Extra {
 		return nil
 	}
 	out := new(Extra)
-	in.DeepCopyInto(out)
-	return out
-}
-
-// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
-func (in *K8sInfraRelease) DeepCopyInto(out *K8sInfraRelease) {
-	*out = *in
-}
-
-// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new K8sInfraRelease.
-func (in *K8sInfraRelease) DeepCopy() *K8sInfraRelease {
-	if in == nil {
-		return nil
-	}
-	out := new(K8sInfraRelease)
 	in.DeepCopyInto(out)
 	return out
 }
@@ -349,14 +335,16 @@ func (in ServiceMetadata) DeepCopyInto(out *ServiceMetadata) {
 			if val == nil {
 				(*out)[key] = nil
 			} else {
-				in, out := &val, &outVal
+				inVal := (*in)[key]
+				in, out := &inVal, &outVal
 				*out = make(ServiceMetadataItem, len(*in))
 				for key, val := range *in {
 					var outVal map[string]string
 					if val == nil {
 						(*out)[key] = nil
 					} else {
-						in, out := &val, &outVal
+						inVal := (*in)[key]
+						in, out := &inVal, &outVal
 						*out = make(ServiceMetadataMap, len(*in))
 						for key, val := range *in {
 							(*out)[key] = val
@@ -390,7 +378,8 @@ func (in ServiceMetadataItem) DeepCopyInto(out *ServiceMetadataItem) {
 			if val == nil {
 				(*out)[key] = nil
 			} else {
-				in, out := &val, &outVal
+				inVal := (*in)[key]
+				in, out := &inVal, &outVal
 				*out = make(ServiceMetadataMap, len(*in))
 				for key, val := range *in {
 					(*out)[key] = val
